--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -106,16 +106,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cars_df['model_year'] = cars_df['model_year'].fillna('unknown')\n",
-    "cars_df['model_year'] = cars_df['model_year'].astype('int', errors='ignore')"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 37,
    "metadata": {},
    "outputs": [],
@@ -286,45 +276,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6.0\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "0        6.0\n",
-       "1        6.0\n",
-       "2        4.0\n",
-       "3        8.0\n",
-       "4        4.0\n",
-       "        ... \n",
-       "51520    6.0\n",
-       "51521    4.0\n",
-       "51522    4.0\n",
-       "51523    4.0\n",
-       "51524    4.0\n",
-       "Name: cylinders, Length: 51525, dtype: float64"
+       "0"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#here we're filling in the missing value for 'cylinders' column with the median value\n",
-    "cyl_med = cars_df['cylinders'].median()\n",
-    "cars_df['cylinders'].fillna(cyl_med)"
+    "print(cars_df['cylinders'].median())\n",
+    "cars_df['cylinders'] = cars_df['cylinders'].fillna(6.0)\n",
+    "cars_df['cylinders'].isna().sum()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 92,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#changing 'model_year' NaN values to 'unknown'\n",
-    "cars_df['model_year'] = cars_df['model_year'].fillna('unknown')"
+    "cars_df['model_year'] = cars_df['model_year'].fillna('unknown')\n",
+    "cars_df['model_year'].isna().sum()"
    ]
   },
   {
@@ -355,12 +354,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 96,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#replacing the NaN values in 'is_4wd' to 0 as the NaN is placeholder for 0s\n",
-    "cars_df['is_4wd'] = (cars_df['is_4wd'].fillna(value=0)).astype('int')\n"
+    "cars_df['is_4wd'] = (cars_df['is_4wd'].fillna(0)).astype('int')\n",
+    "cars_df['is_4wd'].isna().sum()\n"
    ]
   },
   {
@@ -106819,15 +106830,6 @@
     "---\n",
     "## Conclusion\n",
     "In conslusion, after analyzing the dataset, it is apparent that although there is a wide variety of vehicle makes the American vehicles show to be most popular among buyers. This leads me to believe this dataset is from an American dealership. Buyers also do not show a high frequency of expensive vehicle purchases as our second figure shows. It is safe to say, American car manufacturing is not only still alive but thriving in the area in which the dataset originated, with healthy distribution among car makes from across other nations. Unfortunately for the luxury makes and models, there isn't a sizeable marketshare shown within this dataset."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 78,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cars_clean.to_csv('clean_car_data.csv')"
    ]
   }
  ],
