--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +177,7 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>25500</td>\n",
-       "      <td>unknown</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>ford f-150</td>\n",
        "      <td>good</td>\n",
        "      <td>6.0</td>\n",
@@ -247,12 +247,12 @@
        "</div>"
       ],
       "text/plain": [
-       "   price model_year           model  condition  cylinders fuel  odometer  \\\n",
-       "0   9400     2011.0          bmw x5       good        6.0  gas  145000.0   \n",
-       "1  25500    unknown      ford f-150       good        6.0  gas   88705.0   \n",
-       "2   5500     2013.0  hyundai sonata   like new        4.0  gas  110000.0   \n",
-       "3   1500     2003.0      ford f-150       fair        8.0  gas       NaN   \n",
-       "4  14900     2017.0    chrysler 200  excellent        4.0  gas   80903.0   \n",
+       "   price  model_year           model  condition  cylinders fuel  odometer  \\\n",
+       "0   9400      2011.0          bmw x5       good        6.0  gas  145000.0   \n",
+       "1  25500         NaN      ford f-150       good        6.0  gas   88705.0   \n",
+       "2   5500      2013.0  hyundai sonata   like new        4.0  gas  110000.0   \n",
+       "3   1500      2003.0      ford f-150       fair        8.0  gas       NaN   \n",
+       "4  14900      2017.0    chrysler 200  excellent        4.0  gas   80903.0   \n",
        "\n",
        "  transmission    type paint_color  is_4wd date_posted  days_listed      make  \n",
        "0    automatic     SUV         NaN     1.0     2018-06           19       bmw  \n",
@@ -262,7 +262,7 @@
        "4    automatic   sedan       black     NaN     2019-04           28  chrysler  "
       ]
      },
-     "execution_count": 38,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -292,7 +292,7 @@
        "0"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +315,7 @@
        "0"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -363,7 +363,7 @@
        "0"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -387,7 +387,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -409,7 +409,7 @@
        "18"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -432,7 +432,7 @@
        "model              0\n",
        "model_year         0\n",
        "condition          0\n",
-       "cylinders       5260\n",
+       "cylinders          0\n",
        "fuel               0\n",
        "odometer        7892\n",
        "transmission       0\n",
@@ -444,7 +444,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -452,6 +452,36 @@
    "source": [
     "#let's check for missing values\n",
     "cars_df.isna().sum()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#renaming DataFrame to signal cleaned version\n",
+    "cars_clean = cars_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "100"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cars_clean['model'].nunique()"
    ]
   },
   {
@@ -463,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -567,7 +597,7 @@
        "[2326 rows x 1 columns]"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -580,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1981,7 +2011,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -54403,7 +54433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
